# transcode-example

./: .dockerignore  .gitignore  Dockerfile  README.md
.github/workflows/: ci-action.yml
transcode_server/: .env_temp  Cargo.toml  README.md  build.rs
transcode_server/proto/: transcode.proto
transcode_server/settings/: video_formats.json  video_formats1.json
transcode_server/src/: encrypt_file.rs  encrypted_cid.rs  s5.rs  server.rs  shared.rs  transcode_video.rs  utils.rs
tus_client/src/: lib.rs
