[package]
name = "transcode_log"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]] # Bin to run the HelloWorld gRPC server
name = "transcode-server"
path = "src/server.rs"

[dependencies]
blake3 = "1.3.1"
anyhow = "1.0.70"
reqwest = "0.9"
# tus_client = {version = "0.1.1", features = ["reqwest"]}
tus_client = {version = "0.2.0", path = "../tus_client", features = ["reqwest"]}
base64 = "0.21.0"
tonic = "0.9.2"
prost = "0.11"
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7.8", features = ["codec"] }
tokio-stream = "0.1"

hex = "0.4.3"
bytes = "1.4.0"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
once_cell = "1.8.0"
sanitize-filename = "0.4.0"
async-std = "1.10.0"
async-trait = "0.1"
chacha20poly1305 = "0.10.1"
cargo-watch = "8.4.0"
lazy_static = "1.4.0"
futures = "0.3"
actix-web = "4.3.1"
warp = "0.3.1"
serde = "1.0.171"
serde_derive = "1.0.171"
serde_json = "1.0.102"
prost-types = "0.11.9"
prost-derive = "0.11.9"
hyper = "0.14.4"
uuid = { version = "1.4.1", features = ["v4"] }
chrono = "0.4.19"

[build-dependencies]
tonic-build = "0.9.2"
prost-build = "0.11.8"
